第二次修改并提交

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,8 @@ android {
         minSdkVersion 15
         targetSdkVersion 27
         versionCode 1
+
+        sdfsd
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
